--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a {
   color: #000;
 }
 div.main_code {
-  background-color:#346fcf;
+  background-color:#8ab2f2;
   background-size: cover;
   background-position: top;
 }
